css/index.css
body{
    background-color: white;
    margin: 0px! important;
    padding: 0px;
    border: 0px;
    font: inherit;
    vertical-align: baseline;
}


nav{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.logo{
    padding-top: 30px;
}

.links{
    list-style-type: none;
    text-align-last: center;
}
.btn{
    box-sizing: inherit! important;
    width: -webkit-fill-available;
}


.fa{
    padding: 20px;
    text-decoration: none;
    font-size: 100px;
}
.socialLinks{
    font-size: 40px;
}

